Cycles GLSL shading not working for NURBS witn nodal shader. #44718

Closed
opened 2015-05-15 10:23:37 +02:00 by Alexander Romanov · 10 comments
  1. Switch to Cycles engine
  2. Switch viewport mode to Material
  3. Create any NURBS object
  4. Make nodal shader for the material of this object
  5. You will see no shading like it was chosen Solid mode

Alexander (Blend4Web team)

1) Switch to Cycles engine 2) Switch viewport mode to Material 2) Create any NURBS object 3) Make nodal shader for the material of this object 4) You will see no shading like it was chosen Solid mode Alexander (Blend4Web team)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Antonis Ryakiotakis was assigned by Alexander Romanov 2015-05-15 10:23:37 +02:00
Author
Member

Added subscriber: @AlexanderRomanov

Added subscriber: @AlexanderRomanov
Antonis Ryakiotakis was unassigned by Bastien Montagne 2015-05-15 20:01:30 +02:00
Sergey Sharybin was assigned by Bastien Montagne 2015-05-15 20:01:30 +02:00

Added subscribers: @Psy-Fi, @MartijnBerger, @ThomasDinges

Added subscribers: @Psy-Fi, @MartijnBerger, @ThomasDinges

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the issue…

Can confirm the issue…

This issue was referenced by 3cff7768d5

This issue was referenced by 3cff7768d5e919b60b42bac2182ff0efb130d720

Added subscriber: @brecht

Added subscriber: @brecht

Fixed, thanks for the report.

Fixed, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3cff7768d5.

Closed by commit 3cff7768d5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44718
No description provided.