Fix T44718: Cycles GLSL not working for NURBS objects.